codex-rs/tui/src/app/tests/snapshots/codex_tui__app__tests__realtime_requests__voice_replay_reconciles_matching_captions.snap
---
source: tui/src/app/tests/realtime_requests.rs
expression: "normalize_voice_snapshot_directory(&rendered, &app.config.cwd)"
---
╭──────────────────────────────────────────────╮
│ >_ UnieAI Code (v0.0.22-dev-uc0.5.0-ac0.4.0) │
│                                              │
│ model:     gpt-test   /model to change       │
│ directory: /tmp/project                      │
╰──────────────────────────────────────────────╯

  To get started, describe a task or try one of these commands:

  /init - create an AGENTS.md file with instructions for UnieAI Code
  /status - show current session configuration
  /permissions - choose what UnieAI Code is allowed to do
  /model - choose what model and reasoning effort to use
  /review - review any changes and find issues

› show <code> & tests

• spoken answer

› typed words


› show <code> & tests


› typed words

• different caption
